// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templateLiteral > builds pattern 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/TemplateSchema",
    "definitions": {
        "TemplateSchema": {
            "type": "string",
            "pattern": "^id-.*-ok$"
        }
    }
}"
`;

exports[`templateLiteral > covers bigint null and undefined segments 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/TemplateSchemaExtended",
    "definitions": {
        "TemplateSchemaExtended": {
            "type": "string",
            "pattern": "^10n-null-undefined-true$"
        }
    }
}"
`;
